# ck3

./: Cargo.toml  Dioxus.toml  Makefile.toml  readme.md
.cargo/: config.toml
cli/: Cargo.toml  readme.md
cli/src/: app.rs  lib.rs  main.rs  ui.rs
cli/src/ui/: blocks.rs  footer.rs  header.rs  main.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs  structs.rs
core/tests/: tests.rs
cortex/: Cargo.toml
gui/: Cargo.toml  Dioxus.toml  README.md
gui/assets/: main.css
gui/src/: lib.rs  main.rs  server.rs
gui/src/components/: mod.rs
src/: main.rs
