[package]
name = "perso-ck3"
version = "0.1.0"
edition = "2024"

[dependencies]
cli = { path = "cli", optional = true }
#NB : pour le web, faut trouver un remplaçant à rand
gui = { path = "gui", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"

[features]
cli = ["dep:cli"]
web = ["gui/web"]
desktop = ["gui/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
