[workspace]
members = ["core", "cli", "gui"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Waylander <francois.caizes@laposte.net>"]
edition = "2024"

[workspace.dependencies]
#getrandom = { version = "0.3", features = ["wasm_js"] }
#rand = { version = "0.9.2" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
