[package]
name = "core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
rand = { version = "0.9.2" }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.3" }