[package]
name = "core"
version = "0.1.0"
authors = ["Waylander <francois.caizes@laposte.net>"]
edition = "2024"

[dependencies]
rand = "0.9.2"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }