[package]
name = "gui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "gui"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack"] }
serde = {version = "1.0.219", features = ["derive"]}
core = { path = "../core" }
tracing = "0.1.41"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
